# rm_assist

./: CMakeLists.txt  README.md
hello_world/: hello_world.service  hello_world.sh
localization_1/: mapping.sh  nav.sh
localization_1/install/: local_setup.sh  setup.sh
localization_1/install/closed_loop/include/closed_loop/: closed_loop.hpp  closed_loop_node.hpp  fixed_size_map_queue.hpp
localization_1/install/closed_loop/lib/closed_loop/: closed_loop_node
localization_1/install/closed_loop/share/closed_loop/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
localization_1/install/costmap_converter/include/costmap_converter/: costmap_converter_interface.h  costmap_to_lines_convex_hull.h  costmap_to_lines_ransac.h  costmap_to_polygons.h  costmap_to_polygons_concave.h  misc.h
localization_1/install/costmap_converter/share/costmap_converter/: costmap_converter_plugins.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
localization_1/install/costmap_converter_msgs/share/costmap_converter_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
localization_1/install/fast_lio/lib/fast_lio/: fastlio_mapping
localization_1/install/fast_lio/share/fast_lio/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
localization_1/install/hik_camera/lib/hik_camera/: hik_camera_node
localization_1/install/hik_camera/share/hik_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
localization_1/install/icp_registration/include/icp_registration/: icp_registration.hpp
localization_1/install/icp_registration/lib/icp_registration/: icp_registration_node
localization_1/install/icp_registration/share/icp_registration/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
localization_1/install/imu_complementary_filter/include/imu_complementary_filter/: complementary_filter.h  complementary_filter_ros.h
localization_1/install/imu_complementary_filter/lib/imu_complementary_filter/: complementary_filter_node
localization_1/install/imu_complementary_filter/share/imu_complementary_filter/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
localization_1/install/linefit_ground_segmentation/include/ground_segmentation/: bin.h  ground_segmentation.h  segment.h  (+2 more)
localization_1/log/: latest_build
localization_1/src/mechax_trajectory/src/: trajectoryer.cpp
localization_1/src/rm_aimassist/: CMakeLists.txt  package.xml
localization_1/src/rm_aimassist/config/: outpost.yaml
localization_1/src/rm_aimassist/include/rm_aimassist/: assist_node.hpp
localization_1/src/rm_aimassist/launch/: assist_node_launch.py
localization_1/src/rm_aimassist/src/: assist_node.cpp  readme.md
localization_1/src/rm_armor_detector/: CMakeLists.txt
localization_1/src/rm_bringup/launch/: bringup.launch.py
localization_1/src/rm_gimbal_description/urdf/: rm_gimbal.urdf.xacro
localization_1/src/rm_localization/fast_lio/: CMakeLists.txt
localization_1/src/rm_localization/point_lio/: CMakeLists.txt
localization_1/src/rm_msgs/: CMakeLists.txt
localization_1/src/rm_msgs/msg/: AssistData.msg
localization_1/src/rm_navigation/src/: package.xml
localization_1/src/rm_rune/src/: rm_rune_node.cpp
localization_1/src/rm_startup/launch/: rm_launch.py
pcl_package/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  package.xml
pcl_package/src/: pcl.cpp
ros-tf2/: package.xml
traker_package/: CMakeLists.txt  package.xml
traker_package/src/: founder.cpp  tracker.cpp
(+942 files in other folders)
