<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm_aimassist</name>
  <version>0.0.0</version>
   <description>辅助瞄准节点，用于计算机器人到前哨站的相对位置和距离。</description>
  <maintainer email="2151703433@qq.com">jiajia</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rm_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>yaml-cpp</depend>  <!-- 用于解析 YAML 文件 -->
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



